--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.6.1",
-    "express": "^4.21.2",
+    "express": "^4.22.1",
     "express-session": "^1.18.2",
     "express-validator": "^6.14.3",
     "multer": "^1.4.5-lts.1",
-    "mysql2": "^3.15.3",
+    "pg": "^8.11.3",
     "string-similarity": "^4.0.4"
   }
 }
